--- a/Android/app/src/main/res/layout/activity_sticker_pack_details.xml
+++ b/Android/app/src/main/res/layout/activity_sticker_pack_details.xml
@@ -73,7 +73,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <com.example.wapp_sticker_store.BottomFadingRecyclerView
+        <com.max.wapp_sticker_store.BottomFadingRecyclerView
             android:id="@+id/sticker_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
